--- a/pages/contributors.html
+++ b/pages/contributors.html
@@ -108,7 +108,7 @@
 
     <div id="contributor-modal" class="modal-overlay">
         <div class="modal-container">
-            <button class="close-modal" onclick="closeModal()">&times;</button>
+            <button class="close-modal" onclick="closeModal()" aria-label="Close modal">&times;</button>
             
             <div class="modal-header">
                 <img id="modal-avatar" src="" alt="Contributor">
